--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -40,7 +40,8 @@ body{
     color: rgb(212, 126, 20);
     transition: all linear 0.3s;
     cursor: pointer;
-    
+    width: 300px;
+    height: 150px;
 }
 .signin .sign button:hover{
     font-size: 40px;
