--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -7,8 +7,18 @@ a {
     text-decoration: none;
     
 }
+
 body{
-    background: radial-gradient(rgba(0, 0, 255, 0.384),rgba(128, 0, 85, 0.699));
+    width: 100%;
+    
+}
+
+.container{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(247deg,rgba(0, 0, 255, 0.384),rgba(128, 0, 85, 0.699));
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .header{
@@ -58,8 +68,8 @@ body{
       
 }
 
-.signin button span{
-    font-size: 40px;
+.signin .sign button{
+    font-size: 50px;
 }
 
 .signin .form{
